Added logos and details for the app

--- a/code/v1/BehindFood/www/index.html
+++ b/code/v1/BehindFood/www/index.html
@@ -10,7 +10,8 @@
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/zircle"></script>
     <script src="https://cdn.jsdelivr.net/npm/v-img@latest/dist/v-img.min.js"></script>
-    <link href="https://unpkg.com/zircle/dist/zircle.css" rel="stylesheet">
+    <!--<link href="https://unpkg.com/zircle/dist/zircle.css" rel="stylesheet">-->
+    <link href="https://unpkg.com/zircle@0.9.0-rc.5/dist/zircle.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <div id="app">
       <z-canvas :views='$options.components'>
