Première version de l'application hors-ligne, il ne reste plus qu'à implémenter une fonction qui compare les deux fichiers json afin de connaître les média à mettre à jour, ajouter ou supprimer des fichiers locaux. La documentation (rapport ainsi que le grand diagramme de fonctionnement) suivra.

--- a/code/original/index.html
+++ b/code/original/index.html
@@ -84,7 +84,7 @@
         }
 
         if (data.contenu !== null) {
-            return `<div style="max-width: 250px; max-height: 285px; overflow: scroll;">${converter.makeHtml(data.contenu)}</div>`;
+            return `<div style="width: 1000px; max-height: 285px; overflow: scroll;">${converter.makeHtml(data.contenu)}</div>`;
         }
 
         return 'élément manquant...';
