Ajout des fonctions nécessaires au contrôle de contenu de l'application. Peaufinage de l'application notamment pour l'expérience utilisateur (dialogues, popups d'informations, ...), il reste quelques petits détails à régler avec le CSS pour les tailles d'écrans, mais cela ne prendra pas autant de temps que le reste de l'application. Ajout d'un bouton pour permettre à l'utilisateur de mettre à jour le contenu de son application quand il le souhaite. Il ne reste plus qu'à documenter et tester. Le teste le plus important sera sans doute la simulation d'une erreur de réseau durant le téléchargement des fichiers, que ce soit durant une mise à jour ou pour la première installation.

--- a/code/v2/BehindFood/www/index.html
+++ b/code/v2/BehindFood/www/index.html
@@ -31,6 +31,7 @@
         <div id="modal-content-div">Some text in the Modal..</div>
       </div>
     </div>
+    <div id="br-icon" onclick="onButtonClicked()"></div>
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
 </body>
