--- a/code/original/index.html
+++ b/code/original/index.html
@@ -28,6 +28,23 @@
       width: 95%; /* Could be more or less, depending on screen size */
     }
 
+    #br-icon{
+        position: fixed;
+        right: 20px;
+        bottom: 30px;
+        z-index: 100;
+        height: 50px;
+        width: 50px;
+        border-radius: 100%;
+        box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.58);
+        background-image: url(icon.png);
+        background-size: 25px 25px;
+        background-repeat: no-repeat;
+        background-position: center;
+        transform: scale(0.92);
+    }
+    
+
     /* The Close Button */
     .close {
       color: white;
@@ -59,6 +76,8 @@
   <z-canvas :views='$options.components'>
   </z-canvas>
 </div>
+<div id="br-icon" onclick="onButtonClicked()"></div>
+
 <!-- partial -->
   <script>
     var xhr = new XMLHttpRequest();
@@ -173,8 +192,12 @@
 
     xhr.open("GET", "https://adelente-admin.samf.me/zircle-elements?_limit=20000");
     xhr.send();
+
+    function onButtonClicked(){
+        console.log("Button clicked");
+    }
   </script>
-  <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="document.getElementById('myModal').style.display = 'none';">&times;</span>
         <div id="modal-content-div">Some text in the Modal..</p>
