Ajout d'une barre de progression pour le téléchargement avec un texte dynamique d'information, le tout dans un simple modal. Basé sur le nombre de fichiers à télécharger et non pas leur taille. Quelques tests supplémentaires réussis en cas d'arrêt prématuré des téléchargements (redémarrage de l'application par l'invité de commande). Avec ceci, tests de la barre de progression qui affichent effectivement le nombre de fichiers à télécharger et pas plus.

--- a/code/v2/BehindFood/www/index.html
+++ b/code/v2/BehindFood/www/index.html
@@ -24,6 +24,14 @@
         <div id="modal-content-div">Some text in the Modal..</div>
       </div>
     </div>
+    <div id="myLoadingModal">
+      <div id="myProgressDiv">
+        <!--<div id="myBar"></div>-->
+        <h3>Téléchargement</h3>
+        <p id="myProgressText"></p>
+        <progress id="myProgress" value="0" max="100"></progress>
+      </div>      
+    </div>
     <div id="br-icon" onclick="onButtonClicked()"></div>
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
